force-app/main/default/objects/Lead/fields/Application_submitted__c.field-meta.xml
<CustomField>
    <fullName>Application_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the formal health insurance application has been completed and submitted for processing.</description>
    <inlineHelpText>Check this box once the lead&apos;s formal application has been successfully submitted.</inlineHelpText>
    <label>Application submitted</label>
    <type>Checkbox</type>
</CustomField>