force-app/main/default/objects/Lead/fields/Applied_for_Medicare_Part_A_B__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Medicare_Part_A_B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has applied for Medicare Part A and Part B.</description>
    <inlineHelpText>Select if the prospect reports having submitted an application for Medicare Part A and Part B. This does not indicate approval or enrollment.</inlineHelpText>
    <label>Applied for Medicare Part A &amp; B</label>
    <type>Checkbox</type>
</CustomField>