force-app/main/default/objects/Lead/fields/Auto_pay_set_up__c.field-meta.xml
<CustomField>
    <fullName>Auto_pay_set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the lead has successfully configured automatic recurring payments for their premium.</description>
    <inlineHelpText>Check this box if the prospect has completed the setup for automatic payments.</inlineHelpText>
    <label>Auto-pay set up</label>
    <type>Checkbox</type>
</CustomField>