force-app/main/default/objects/Lead/fields/Bank_collateral_documents_provided_if_r__c.field-meta.xml
<CustomField>
    <fullName>Bank_collateral_documents_provided_if_r__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the necessary bank collateral documentation has been submitted by the lead, if required for policy approval or financial verification.</description>
    <inlineHelpText>Check this box once the required bank collateral documents have been received and verified for this application.</inlineHelpText>
    <label>Bank collateral documents provided (if r</label>
    <type>Checkbox</type>
</CustomField>