force-app/main/default/objects/Lead/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <description>Year of Birth</description>
    <formula>YEAR(Birthdate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>