force-app/main/default/objects/Lead/fields/COI_issued_if_required__c.field-meta.xml
<CustomField>
    <fullName>COI_issued_if_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a Certificate of Insurance (COI) has been generated and provided, if applicable to the specific policy type.</description>
    <inlineHelpText>Check this box if a Certificate of Insurance was required and has been issued to the policyholder.</inlineHelpText>
    <label>COI issued (if required)</label>
    <type>Checkbox</type>
</CustomField>