force-app/main/default/objects/Lead/fields/Confirmation_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a formal confirmation email has been sent to the lead following a specific milestone or application submission.</description>
    <inlineHelpText>Check this box once the confirmation email has been successfully delivered to the lead.</inlineHelpText>
    <label>Confirmation email sent</label>
    <type>Checkbox</type>
</CustomField>