force-app/main/default/objects/Lead/fields/Educational_reference_video_sent__c.field-meta.xml
<CustomField>
    <fullName>Educational_reference_video_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether educational materials or reference videos regarding health plans and coverage have been shared with the lead.</description>
    <inlineHelpText>Check this box if an educational or reference video has been sent to the prospect.</inlineHelpText>
    <label>Educational / reference video sent</label>
    <type>Checkbox</type>
</CustomField>