force-app/main/default/objects/Lead/fields/EFT_Auto_pay_set_up__c.field-meta.xml
<CustomField>
    <fullName>EFT_Auto_pay_set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms that the lead has successfully established an Electronic Funds Transfer (EFT) or automatic payment method for recurring premiums.</description>
    <inlineHelpText>Check this box once the automated payment setup is confirmed and finalized to prevent coverage lapses.</inlineHelpText>
    <label>EFT / Auto-pay set up</label>
    <type>Checkbox</type>
</CustomField>