force-app/main/default/objects/Lead/fields/Eligibility_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect’s eligibility has been reviewed and verified.</description>
    <inlineHelpText>Select when eligibility review has been completed according to internal guidelines.</inlineHelpText>
    <label>Eligibility reviewed</label>
    <type>Checkbox</type>
</CustomField>