force-app/main/default/objects/Lead/fields/Eligibility_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Start_Month__c</fullName>
    <description>Stores the first month the individual becomes eligible for Medicare in MM/DD/YYYY format. This field is used for intake tracking and enrollment planning when full date precision is not required.</description>
    <inlineHelpText>Enter the first month of Medicare eligibility in MM/DD/YYYY format (for example, 03/01/2026).</inlineHelpText>
    <label>Eligibility Start Month</label>
    <length>128</length>
    <type>Text</type>
</CustomField>