force-app/main/default/objects/Lead/fields/Employer_coverage_verified__c.field-meta.xml
<CustomField>
    <fullName>Employer_coverage_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect’s employer-sponsored coverage has been verified.</description>
    <inlineHelpText>Select when employer-sponsored insurance coverage has been confirmed during eligibility review.</inlineHelpText>
    <label>Employer coverage verified</label>
    <type>Checkbox</type>
</CustomField>