force-app/main/default/objects/Lead/fields/Enrollment_completed__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the enrollment process has been completed and submitted.</description>
    <inlineHelpText>Select when the enrollment application has been fully completed and submitted. This does not confirm approval or coverage activation.</inlineHelpText>
    <label>Enrollment completed</label>
    <type>Checkbox</type>
</CustomField>