force-app/main/default/objects/Lead/fields/EOI_issued_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>EOI_issued_if_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a Evidence of Insurability (EOI) has been generated and provided, if applicable to the specific policy type.</description>
    <inlineHelpText>Check this box if Evidence of Insurability was required and has been issued to the policyholder.</inlineHelpText>
    <label>EOI issued (if applicable)</label>
    <type>Checkbox</type>
</CustomField>