force-app/main/default/objects/Lead/fields/Estimated_income__c.field-meta.xml
<CustomField>
    <fullName>Estimated_income__c</fullName>
    <description>Captures the lead&apos;s self-reported annual gross income to assist in financial qualification for specific health insurance products.</description>
    <inlineHelpText>Enter the estimated total annual household income before taxes. Round to the nearest whole dollar.</inlineHelpText>
    <label>Estimated income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>