force-app/main/default/objects/Lead/fields/First_month_premium_paid__c.field-meta.xml
<CustomField>
    <fullName>First_month_premium_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the initial premium payment has been received and verified, allowing the policy to move into an active state.</description>
    <inlineHelpText>Check this box once the first month&apos;s premium has been successfully paid by the lead.</inlineHelpText>
    <label>First month premium paid</label>
    <type>Checkbox</type>
</CustomField>