force-app/main/default/objects/Lead/fields/Household_size__c.field-meta.xml
<CustomField>
    <fullName>Household_size__c</fullName>
    <description>Captures the total number of individuals living in the lead&apos;s household for insurance eligibility and coverage scaling.</description>
    <inlineHelpText>Enter the total number of people residing in the household, including the primary applicant and any dependents.</inlineHelpText>
    <label>Household size</label>
    <length>64</length>
    <type>Text</type>
</CustomField>