force-app/main/default/objects/Lead/fields/ID_card_received__c.field-meta.xml
<CustomField>
    <fullName>ID_card_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has provided a copy of a government-issued identification card.</description>
    <inlineHelpText>Select when the prospect has submitted a copy of a valid government-issued ID for identification purposes. This does not represent identity verification or approval.</inlineHelpText>
    <label>ID card received</label>
    <type>Checkbox</type>
</CustomField>