force-app/main/default/objects/Lead/fields/Immigration_residency_status__c.field-meta.xml
<CustomField>
    <fullName>Immigration_residency_status__c</fullName>
    <description>Captures the legal residency or immigration status of the lead to ensure compliance with insurance enrollment regulations.</description>
    <inlineHelpText>Indicate the lead&apos;s current residency or immigration status (e.g., Citizen, Permanent Resident, etc.).</inlineHelpText>
    <label>Immigration / residency status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>