force-app/main/default/objects/Lead/fields/Important_Note__c.field-meta.xml
<CustomField>
    <fullName>Important_Note__c</fullName>
    <description>Stores critical information or context related to this record that requires visibility across users. This field is intended for business-relevant notes that may impact processing, compliance, enrollment decisions, or follow-up actions.</description>
    <inlineHelpText>Enter any important details that other team members should be aware of. Include information that may affect processing, compliance, or customer communication.</inlineHelpText>
    <label>Important Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>