force-app/main/default/objects/Lead/fields/Initial_premium_collected__c.field-meta.xml
<CustomField>
    <fullName>Initial_premium_collected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the first premium payment has been successfully gathered from the lead to initiate policy activation.</description>
    <inlineHelpText>Check this box once the initial payment has been received and verified.</inlineHelpText>
    <label>Initial premium collected</label>
    <type>Checkbox</type>
</CustomField>