force-app/main/default/objects/Lead/fields/Is_Primaryholder__c.field-meta.xml
<CustomField>
    <fullName>Is_Primaryholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the primary policyholder for the insurance?</description>
    <inlineHelpText>Is this the primary policyholder for the insurance?</inlineHelpText>
    <label>Is Primaryholder?</label>
    <type>Checkbox</type>
</CustomField>