force-app/main/default/objects/Lead/fields/MBI_Number__c.field-meta.xml
<CustomField>
    <fullName>MBI_Number__c</fullName>
    <inlineHelpText>Medicare Beneficiary Identifier (11 characters), as printed on the Medicare card.</inlineHelpText>
    <label>MBI Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>