force-app/main/default/objects/Lead/fields/Medicaid_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Eligibility__c</fullName>
    <label>Medicaid Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>MQMB</fullName>
            </value>
            <value>
                <fullName>QMB</fullName>
            </value>
            <value>
                <fullName>SLMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>