force-app/main/default/objects/Lead/fields/Medicare_card_received__c.field-meta.xml
<CustomField>
    <fullName>Medicare_card_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect reports having received their Medicare card.</description>
    <inlineHelpText>Select if the prospect confirms they have received their Medicare card. This does not confirm coverage status or eligibility.</inlineHelpText>
    <label>Medicare card received</label>
    <type>Checkbox</type>
</CustomField>