force-app/main/default/objects/Lead/fields/PCP_drug_list_collected__c.field-meta.xml
<CustomField>
    <fullName>PCP_drug_list_collected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect’s primary care provider information and current medication list have been collected.</description>
    <inlineHelpText>Select when the prospect has provided their primary care provider details and a list of current medications. This does not represent clinical review or validation.</inlineHelpText>
    <label>PCP, drug list collected</label>
    <type>Checkbox</type>
</CustomField>