force-app/main/default/objects/Lead/fields/PCP_selected__c.field-meta.xml
<CustomField>
    <fullName>PCP_selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has successfully selected a Primary Care Physician as part of their health plan enrollment.</description>
    <inlineHelpText>Check this box once the lead has confirmed their choice of a Primary Care Physician.</inlineHelpText>
    <label>PCP selected</label>
    <type>Checkbox</type>
</CustomField>