force-app/main/default/objects/Lead/fields/Plan_options_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Plan_options_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether available plan options have been reviewed with the prospect.</description>
    <inlineHelpText>Select when plan options have been discussed and reviewed with the prospect. This does not indicate plan selection or enrollment.</inlineHelpText>
    <label>Plan options reviewed</label>
    <type>Checkbox</type>
</CustomField>