force-app/main/default/objects/Lead/fields/Plan_selected__c.field-meta.xml
<CustomField>
    <fullName>Plan_selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has selected a plan option.</description>
    <inlineHelpText>Indicates whether the prospect has selected a plan option.</inlineHelpText>
    <label>Plan selected</label>
    <type>Checkbox</type>
</CustomField>