force-app/main/default/objects/Lead/fields/Policy_documents_delivered__c.field-meta.xml
<CustomField>
    <fullName>Policy_documents_delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms that the final policy documents have been sent to and received by the lead.</description>
    <inlineHelpText>Check this box once the physical or digital policy package has been delivered to the client.</inlineHelpText>
    <label>Policy documents delivered</label>
    <type>Checkbox</type>
</CustomField>