force-app/main/default/objects/Lead/fields/Policy_issued__c.field-meta.xml
<CustomField>
    <fullName>Policy_issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the formal insurance policy has been generated and officially granted to the lead.</description>
    <inlineHelpText>Check this box once the final policy has been issued by the carrier.</inlineHelpText>
    <label>Policy issued</label>
    <type>Checkbox</type>
</CustomField>