force-app/main/default/objects/Lead/fields/Preferred_PCP__c.field-meta.xml
<CustomField>
    <fullName>Preferred_PCP__c</fullName>
    <description>Captures the name or facility of the prospect&apos;s preferred Primary Care Physician to check for in-network status.</description>
    <inlineHelpText>Enter the name of the doctor or medical group the lead currently visits for primary care.</inlineHelpText>
    <label>Preferred PCP</label>
    <length>64</length>
    <type>Text</type>
</CustomField>