force-app/main/default/objects/Lead/fields/Prescription_drug_list__c.field-meta.xml
<CustomField>
    <fullName>Prescription_drug_list__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the lead has provided a specific list of required prescription medications to verify coverage under the proposed health plan.</description>
    <inlineHelpText>Check this box if the prospect has a list of current medications that need to be checked against the plan&apos;s formulary.</inlineHelpText>
    <label>Prescription drug list</label>
    <type>Checkbox</type>
</CustomField>