force-app/main/default/objects/Lead/fields/Primaryholder__c.field-meta.xml
<CustomField>
    <fullName>Primaryholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead who is the primary policyholder of this household. Carried over to Contact.Primaryholder__c on conversion.</description>
    <inlineHelpText>Select the household&apos;s primary policyholder. Leave blank if this lead is the primary holder.</inlineHelpText>
    <label>Primaryholder</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The primary policyholder is not permitted to select its Primary Holder.</errorMessage>
        <filterItems>
            <field>$Source.Is_Primaryholder__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Household Members</relationshipLabel>
    <relationshipName>Household_Members</relationshipName>
    <type>Lookup</type>
</CustomField>