force-app/main/default/objects/Lead/fields/Questions_answered__c.field-meta.xml
<CustomField>
    <fullName>Questions_answered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether all preliminary or mandatory intake questions have been addressed by the lead during the discovery phase.</description>
    <inlineHelpText>Check this box if the prospect has provided answers to all required discovery questions.</inlineHelpText>
    <label>Questions answered</label>
    <type>Checkbox</type>
</CustomField>