force-app/main/default/objects/Lead/fields/Quote_link_sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_link_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether an automated or manual insurance quote link has been delivered to the lead for review.</description>
    <inlineHelpText>this box once the personalized quote link has been sent to the prospect.</inlineHelpText>
    <label>Quote link sent</label>
    <type>Checkbox</type>
</CustomField>