force-app/main/default/objects/Lead/fields/Required_documents_verified_if_any__c.field-meta.xml
<CustomField>
    <fullName>Required_documents_verified_if_any__c</fullName>
    <description>Stores the verification status or tracking information for mandatory enrollment documentation required for health plan processing.</description>
    <inlineHelpText>Enter the verification status or notes regarding the required documentation for this lead.</inlineHelpText>
    <label>Required documents verified (if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>