force-app/main/default/objects/Lead/fields/Specialists_needed__c.field-meta.xml
<CustomField>
    <fullName>Specialists_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the lead requires consultation with a medical specialist to determine plan eligibility or specific network coverage.</description>
    <inlineHelpText>Check this box if the prospect mentioned a need for specific specialists (e.g., Cardiologist, Oncologist) to be included in their provider network.</inlineHelpText>
    <label>Specialists needed</label>
    <type>Checkbox</type>
</CustomField>