force-app/main/default/objects/Lead/fields/SS_income_confirmed__c.field-meta.xml
<CustomField>
    <fullName>SS_income_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect’s Social Security income has been reviewed and confirmed.</description>
    <inlineHelpText>Select when Social Security income information has been reviewed during eligibility assessment.</inlineHelpText>
    <label>SS income confirmed</label>
    <type>Checkbox</type>
</CustomField>