force-app/main/default/objects/Lead/fields/SSA_account_verified__c.field-meta.xml
<CustomField>
    <fullName>SSA_account_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has confirmed access to their Social Security Administration (SSA) account.</description>
    <inlineHelpText>Select when the prospect confirms they have access to their SSA account. This does not represent direct verification with the SSA.</inlineHelpText>
    <label>SSA account verified</label>
    <type>Checkbox</type>
</CustomField>