force-app/main/default/objects/Lead/fields/Text_sent_12_months_prior__c.field-meta.xml
<CustomField>
    <fullName>Text_sent_12_months_prior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has received marketing text messages within the past 12 months.</description>
    <inlineHelpText>Select if the prospect has been sent any marketing text messages within the last 12 months. Used for communication compliance validation.</inlineHelpText>
    <label>Text sent (12 months prior)</label>
    <type>Checkbox</type>
</CustomField>