force-app/main/default/objects/Lead/fields/Text_sent_4_months_prior__c.field-meta.xml
<CustomField>
    <fullName>Text_sent_4_months_prior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has received marketing text messages within the past 4 months.</description>
    <inlineHelpText>Select if the prospect has been sent any marketing text messages within the last 4 months. Used to validate communication eligibility.</inlineHelpText>
    <label>Text sent  (4 months prior)</label>
    <type>Checkbox</type>
</CustomField>