force-app/main/default/objects/Lead/fields/Text_sent_6_months_prior__c.field-meta.xml
<CustomField>
    <fullName>Text_sent_6_months_prior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the prospect has received marketing text messages within the past 6 months.</description>
    <inlineHelpText>Select if the prospect has been sent any marketing text messages within the last 6 months. Used to validate communication eligibility.</inlineHelpText>
    <label>Text sent  (6 months prior)`</label>
    <type>Checkbox</type>
</CustomField>