force-app/main/default/objects/Lead/fields/Underwriting_in_progress__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_in_progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the lead&apos;s application is currently being reviewed by the underwriting department to determine risk and final policy approval</description>
    <inlineHelpText>Check this box if the application is currently under review by the underwriting</inlineHelpText>
    <label>Underwriting in progress</label>
    <type>Checkbox</type>
</CustomField>