force-app/main/default/objects/Lead/recordTypes/Commercial_Group_Health.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Group_Health</fullName>
    <active>true</active>
    <businessProcess>Others Lead Process</businessProcess>
    <description>Lead record type for prospects whose company information arrives with them - commercial lines and group health. Converts to an Account (company) alongside the Contact.</description>
    <label>Commercial / Group Health</label>
</RecordType>