force-app/main/default/objects/Lead/recordTypes/Health.recordType-meta.xml
<RecordType>
    <fullName>Health</fullName>
    <active>true</active>
    <businessProcess>Health Process</businessProcess>
    <description>Record type for general health insurance prospects and non-Medicare medical services, including individual and group health plans.</description>
    <label>Health</label>
</RecordType>