force-app/main/default/objects/Lead/recordTypes/Medicare.recordType-meta.xml
<RecordType>
    <fullName>Medicare</fullName>
    <active>true</active>
    <businessProcess>Medicare Lead Process</businessProcess>
    <description>Lead record type for Medicare prospects requiring regulated handling and compliance controls.</description>
    <label>Medicare</label>
</RecordType>