force-app/main/default/objects/Lead/recordTypes/Others.recordType-meta.xml
<RecordType>
    <fullName>Others</fullName>
    <active>true</active>
    <businessProcess>Others Lead Process</businessProcess>
    <description>Primary lead record type for non-regulated, standard lead intake and processing.</description>
    <label>Others</label>
</RecordType>