force-app/main/default/objects/Lead/validationRules/Block_Plan_Enrollment_Without_AB.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Plan_Enrollment_Without_AB</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status),
  TEXT(Status) = &quot;Plan Enrollment&quot;,
  OR(
    NOT(Applied_for_Medicare_Part_A_B__c),   
    NOT(Medicare_card_received__c),
    NOT(Part_B_premium_auto_draft_confirmed__c),
    NOT(PCP_drug_list_collected__c)
  )
)</errorConditionFormula>
    <errorMessage>Complete all Medicare A &amp; B requirements before moving to Plan Enrollment.</errorMessage>
</ValidationRule>